# floatbackend

./: .gitignore  pyproject.toml  requirement.txt  requirements.txt  vercel.json
float/: asgi.py  settings.py  urls.py  wsgi.py
floatapp/: admin.py  apps.py  models.py  serializers.py  signals.py  storages.py  urls.py  views.py
floatapp/migrations/: 0001_initial.py  0002_screenshot_blurhash.py  0003_auto_20220523_1908.py  0004_auto_20220524_1109.py  0005_auto_20220525_1722.py  0006_auto_20220602_2131.py  0007_auto_20220614_1930.py  0008_populate_uuid_values.py  0009_alter_screenshot_uuid.py  0010_auto_20220623_0956.py  0011_auto_20220623_1013.py  0012_alter_screenshot_screenshot_width.py  0013_remove_screenshot_metadata.py  0014_remove_screenshot_screenshot.py  0015_screenshot_metadata.py  0016_remove_screenshot_screenshot_width.py  0017_screenshot_screenshot_width.py  0018_remove_screenshot_blurhash.py  0019_auto_20220625_2140.py
