[tool.poetry]
name = "floatbackend"
version = "0.1.0"
description = "float backend for workflows"
authors = ["floatit <info@addfloat.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.4"
asgiref = "3.5.2"
blurhash-python = "1.1.3"
boto3 = "1.24.22"
botocore = "1.27.22"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.0"
cryptography = "37.0.2"
defusedxml = "0.7.1"
dj-database-url = "0.5.0"
dj-rest-auth = "^2.2.4"
django-allauth = "^0.51.0"
django-cleanup = "6.0.0"
django-cors-headers = "^3.13.0"
django-filter = "22.1"
django-storages = "^1.12.3"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "5.2.0"
drf-extra-fields = "3.4.0"
gunicorn = "20.1.0"
idna = "3.3"
jmespath = "1.0.1"
oauthlib = "3.2.0"
Pillow = "^9.2.0"
psycopg2-binary = "2.9.3"
pycparser = "2.21"
PyJWT = "2.4.0"
python-dateutil = "2.8.2"
python-decouple = "3.6"
python3-openid = "3.2.0"
pytz = "2022.1"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
s3transfer = "0.6.0"
six = "1.16.0"
sqlparse = "0.4.2"
urllib3 = "1.26.9"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
