[tool.poetry]
name = "floatbackend"
version = "0.1.0"
description = "float workflow"
authors = ["floatit <info@addfloat.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
dj-database-url = "^0.5.0"
django-decouple = "^2.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.13.0"
django-allauth = "^0.51.0"
dj-rest-auth = "^2.2.4"
django-cleanup = "^6.0.0"
django-storages = "^1.12.3"
django-filter = "^22.1"
boto3 = "^1.24.23"
blurhash-python = "^1.1.3"
djangorestframework-simplejwt = "^5.2.0"
drf-extra-fields = "^3.4.0"
cryptography = "^37.0.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
